@@ -1,3 +1,11 @@
+2017-07-24 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/z80/gen.c: fix bug #2486 (frame pointer offset wrong)
+	* src/z80/peeph-z80.def,
+	* src/z80/peeph-r2k.def,
+	* src/z80/peeph-tlcs90.def: fix unsafe rules exposed by fixing #2486
+	* sdas/asrab/rabmch.c: fix encoding of ld (n+sp),hl instruction
+
 2017-07-23 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCralloc.hpp:
